--- a/jogodaMemoriaIon-20250703T121613Z-1-001/jogodaMemoriaIon/style.css
+++ b/jogodaMemoriaIon-20250703T121613Z-1-001/jogodaMemoriaIon/style.css
@@ -65,7 +65,7 @@ header{
 }
 
 .verso{
-    background-color: #4a6da7;
+    background-image: url("imgs/verso-institucional.png");
     background-size: cover;
 }
 
